feat: update kajian
